@@ -4,43 +4,49 @@
 
 Language: R
 
-Description: An R package that integrates support vector machine (SVM) from machine learning with hypothesis testing from statistics. It follows a structured SVM implementation covering data preprocessing, feature     selection, model training, prediction, and evaluation. Functions for Z-test and likelihood ratio test (LRT) are provided to evaluate the model's accuracy with statistical rigor. Additionally, the distribution of       data and the type I errors from the hypothesis testing can be visualized to help users design the model. For guides on how to use the package, please refer to the documentation in the `BinarySVMXHT/doc` folder.
+Description: An R package that integrates support vector machine (SVM) from machine learning with hypothesis testing from statistics. It follows a structured SVM implementation covering data preprocessing, feature     selection, model training, prediction, and evaluation. Functions for Z-test and likelihood ratio test (LRT) are provided to evaluate the model's accuracy with statistical rigor. Additionally, the distribution of       data and the type I errors from the hypothesis testing can be visualized to help users design the model. For more details and guides on how to use the package, please refer to `BinarySVMXHT/doc/SVM-and-Hypothesis-Testing.html`. 
 
 How to run:
 - Download the `BinaryXSVMHT_0.1.0.tar.gz` in the `BinaryXSVMHT` folder.
-- In an R codespace, type `install.packages("path/to/BinaryXSVMHT_0.1.0.tar.gz", repos = NULL, type = "source")` in the R console.
+- In an R codespace, type `install.packages("path/to/BinaryXSVMHT_0.1.0.tar.gz", repos = NULL, type = "source")` in the console.
 - Continue typing `library(BinaryXSVMHT)` in the R console to load the functions in the package to your R environment.
 
-## 2. Gomoku Game
+## 2. Gomoku (Five in a Row) Game
 
 
 Language: Java
 
-Description: A classic gomoku strategy board game implemented in Java.
-
-How to run: Clone
+How to run: 
+- Open this repository in a codespace.
+- Type `cd "Gomoku Game"` in the terminal window to change the directory.
+- Continue typing `java --module-path javafx-sdk-21.0.7/lib --add-modules javafx.controls,javafx.fxml GomokuGameFX` to start the game.
 
 Gameplay:
 
 Controls:
 
-## 3. Terminal Chat Rooms
+## 3. Terminal Chatroom
 
 
 Language: Java
 
-Description: 
+Description: A local server and client terminal chatroom with named users, simple search, and message history. 
 
 How to run:
+- Open this repository in a codespace.
+- Type `cd "Terminal Chat Room"` in the terminal window to change the directory.
+- Continue typing `java Server` to start a server.
+- Open a new terminal and type `java Client` to enter a new user. Repeat this step to enter more users.
 
 ## 4. Snake Game
 
 
 Language: Python
 
-Description:
-
 How to run:
+- Open this repository in a codespace.
+- Type `cd "Snake Game"` in the terminal window to change the directory.
+- Continue typing `python3 snake_game.py` to start the game.
 
 Gameplay:
 
